# pythonParkingSpot

./: Dockerfile  README.md  V1.postman_collection.json  docker-compose.yml  pyproject.toml  run.py  setup.py
app/: __init__.py
app/controllers/: cars_controller.py  floors_controller.py  parking_spots_controller.py
app/models/: car_model.py  floor_model.py  parking_spot_model.py
app/services/: car_service.py  parking_spot_service.py
app/utils/: db_util.py
app/utils/types/models/: car.py  floor.py  parkingSpot.py
app/utils/types/views/base_view/: viewParams.py  viewReturn.py
app/views/: base_view.py
db/: init.sql
tests/: car_model_test.py  floor_model_test.py  parking_spot_model_test.py  test_example.py
